<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.hcs.android.business.entity.DeviceModel" />
        <import type="com.hcs.app.util.DisplayConvertUtil" />
        <variable
            name="roomModel"
            type="com.hcs.android.business.entity.PlaceModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/friend_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:contentPaddingBottom="15dp"
        app:contentPaddingLeft="10dp"
        app:contentPaddingRight="10dp"
        app:contentPaddingTop="15dp">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="200dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_phone_no_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/room_phone_no"
                android:textColor="#888888"
                android:textSize="15sp"

                />

            <TextView
                android:id="@+id/txt_phone_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/txt_phone_no_key"
                android:layout_marginLeft="12dp"
                android:layout_toRightOf="@+id/txt_phone_no_key"
                android:singleLine="true"
                android:textColor="#222222"
                android:textSize="15sp"
                android:text="@{String.valueOf(roomModel.place.placeSn)}"
                />

            <TextView
                android:id="@+id/txt_address_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_phone_no_key"
                android:layout_marginTop="4dp"
                android:text="@string/friend_address"
                android:textColor="#888888"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt_news_detail_title_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/txt_address_key"
                android:layout_marginLeft="12dp"
                android:layout_toRightOf="@+id/txt_address_key"
                android:singleLine="true"
                android:text="@{DisplayConvertUtil.getDeviceAddress(roomModel)}"
                android:textColor="#222222"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/txt_group_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_address_key"
                android:layout_marginTop="4dp"
                android:text="@string/room_no"
                android:textColor="#888888"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt_group_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/txt_group_key"
                android:layout_marginLeft="12dp"
                android:layout_toRightOf="@+id/txt_group_key"
                android:singleLine="true"
                android:text="@{DisplayConvertUtil.getNo(roomModel)}"
                android:textColor="#222222"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt_presence_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_group_key"
                android:layout_marginTop="4dp"
                android:text="@string/friend_presence"
                android:textColor="#888888"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt_presence_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/txt_presence_key"
                android:layout_marginLeft="12dp"
                android:layout_toRightOf="@+id/txt_presence_key"
                android:singleLine="true"
                android:text="@{DisplayConvertUtil.getDeviceState(roomModel)}"
                android:textColor="#222222"
                android:textSize="15sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</layout>